source/blender/io/wavefront_obj/exporter/obj_export_file_writer.hh
@@ -115,7 +115,8 @@ class OBJWriter : NonMovable, NonCopyable {
                                                           const IndexOffsets &offsets,
                                                           Span<int> vert_indices,
                                                           Span<int> uv_indices,
-                                                          Span<int> normal_indices) const;
+                                                          Span<int> normal_indices,
+                                                          bool flip) const;
   /**
    * \return Writer function with appropriate polygon-element syntax.
    */
@@ -128,7 +129,8 @@ class OBJWriter : NonMovable, NonCopyable {
                                     const IndexOffsets &offsets,
                                     Span<int> vert_indices,
                                     Span<int> uv_indices,
-                                    Span<int> normal_indices) const;
+                                    Span<int> normal_indices,
+                                    bool flip) const;
   /**
    * Write one line of polygon indices as "f v1//vn1 v2//vn2 ...".
    */
@@ -136,7 +138,8 @@ class OBJWriter : NonMovable, NonCopyable {
                                  const IndexOffsets &offsets,
                                  Span<int> vert_indices,
                                  Span<int> /*uv_indices*/,
-                                 Span<int> normal_indices) const;
+                                 Span<int> normal_indices,
+                                 bool flip) const;
   /**
    * Write one line of polygon indices as "f v1/vt1 v2/vt2 ...".
    */
@@ -144,7 +147,8 @@ class OBJWriter : NonMovable, NonCopyable {
                              const IndexOffsets &offsets,
                              Span<int> vert_indices,
                              Span<int> uv_indices,
-                             Span<int> /*normal_indices*/) const;
+                             Span<int> /*normal_indices*/,
+                             bool flip) const;
   /**
    * Write one line of polygon indices as "f v1 v2 ...".
    */
@@ -152,7 +156,8 @@ class OBJWriter : NonMovable, NonCopyable {
                           const IndexOffsets &offsets,
                           Span<int> vert_indices,
                           Span<int> /*uv_indices*/,
-                          Span<int> /*normal_indices*/) const;
+                          Span<int> /*normal_indices*/,
+                          bool flip) const;
 };
 
 /**
